# evcc-CYD-ESP32-2432S028

./: .gitignore  LICENSE  README.md  platformio.ini
.pio/libdeps/esp32dev/: lv_conf.h
.pio/libdeps/esp32dev/TFT_eSPI/: User_Setup.h
GUI/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
GUI/components/: ui_comp_hook.c
src/: CMakeLists.txt  config.h.template  filelist.txt  main.cpp  ui.c  ui.h  ui_events.h
src/images/: ui_img_1529214255.c  ui_img_1680447448.c  ui_img_9025960_sun_icon_png.c  ui_img_955610505.c  ui_img_evcc_logo_png.c
src/screens/: ui_MainScreen.c
